[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UserInterface/HealthBar.gd" type="Script" id=1]
[ext_resource path="res://assets/Menu and UI/dray-hp-bar/HP-bar-under.png" type="Texture" id=2]
[ext_resource path="res://assets/Menu and UI/dray-hp-bar/HP-bar-progress.png" type="Texture" id=3]
[ext_resource path="res://assets/Menu and UI/dray-hp-bar/HP-bar-border.png" type="Texture" id=4]

[node name="HealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 32.0
margin_bottom = 7.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.921569, 0.658824, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthOver" type="TextureProgress" parent="."]
margin_top = 0.282808
margin_right = 32.0
margin_bottom = 7.28281
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="FlashTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="HealTween" type="Tween" parent="."]

[node name="DelayUntilTween" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="tween_completed" from="HealTween" to="." method="_on_HealTween_tween_completed"]
[connection signal="timeout" from="DelayUntilTween" to="." method="_on_DelayUntilTween_timeout"]
